--- a/templates/game.html
+++ b/templates/game.html
@@ -1,10 +1,11 @@
 <ion-view view-title="Spieltag">
   <ion-content>
     <h1>Spieltag</h1>
-    <table class="game_tbl">
-    	<div class="oneliner">
-    	TEAM A<input type="text" ng-model="teama_score" /> : <input type="text" ng-model="teamb_score" > TEAM B
-    	</div>
+    <div ng-hide="game_done" class="oneliner">
+        TEAM A<input type="number" ng-model="gv.teama_score" /> : <input type="number" ng-model="gv.teamb_score" > TEAM B
+    </div>
+    <table ng-hide="game_done" class="game_tbl">
+
     	<thead>
     		<th>Team</th>
     		<th>Name</th>
@@ -17,17 +18,6 @@
     		<div class="list">
     		<td>
     		{{player.curr.team}}
-    		<!--
- 				 <label class="item item-input item-select">
-				    <div class="input-label">
-				      Team
-				    </div>
-				    <select ng-model="player.team">
-				      <option selected>A</option>
-				      <option>B</option>
-				    </select>
-				  </label>
-				</div> -->
 			</td>
     		<td>{{player.name}}</td>
     		<td>
@@ -42,5 +32,7 @@
     	</tr>
     	</tbody>
     </table>
+    <button ng-show="game_done" ng-click="start_game()">Neues Spiel</button>
+    <button ng-show="game_done" ng-click="end_game()">Spiel speichern</button>
   </ion-content>
 </ion-view>
