--- a/templates/menu.html
+++ b/templates/menu.html
@@ -18,11 +18,14 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/table">
-          Tabelle
+        <ion-item menu-close href="#/app/game" ng-click="start_game()">
+          Spieltag starten
         </ion-item>
         <ion-item menu-close href="#/app/game">
           Spieltag
+        </ion-item>
+        <ion-item menu-close href="#/app/table">
+          Tabelle
         </ion-item>
        <!-- <ion-item menu-close href="#/app/players">
           Spieler
