--- a/templates/mlbtable.html
+++ b/templates/mlbtable.html
@@ -12,9 +12,9 @@
     		<th>TOTAL POINTS</th>
     	</thead>
     	<tbody>
-	      <tr ng-repeat="(name, player) in players">
+	      <tr ng-repeat="player in players track by $index">
             <td>
-                {{$index + 1}}
+                {{player.position + 1}}
             </td>
             <td>
                 {{player.name}}
