--- a/templates/menu.html
+++ b/templates/menu.html
@@ -27,9 +27,12 @@
         <ion-item menu-close href="#/app/table">
           Tabelle
         </ion-item>
-       <!-- <ion-item menu-close href="#/app/players">
+        <ion-item menu-close href="#/app/history">
+          History
+        </ion-item>
+        <ion-item menu-close href="#/app/players">
           Spieler
-        </ion-item> -->
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
