fixed: minor bugs, added more comments

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ td {
 .score_input {
 	width: 3em;
 }
-.oneliner input{
+.oneliner .list{
+	width: 20%;
 	display:inline-block;
 	text-align:center;
 }
