--- a/templates/game.html
+++ b/templates/game.html
@@ -1,40 +1,87 @@
 <ion-view view-title="Spieltag">
   <ion-content>
     <h1>Spieltag</h1>
-    <div ng-hide="gv.gameDone" class="oneliner">
-        TEAM A<input class="score_input" type="number" ng-model="gv.team_scoreA" /> : <input class="score_input" type="number" ng-model="gv.team_scoreB" > TEAM B
+    <div ng-hide="gv.gameStarted">Menü -> Spieltag starten!
     </div>
-    <div ng-show="gv.gameDone" class="oneliner">
-        TEAM A {{gv.team_scoreA}} : {{gv.team_scoreB}} TEAM B
+    <div ng-show="gv.gameStarted" class="oneliner">
+        Team A      
+        <div class="list">
+            <div class="item item-input item-select">
+                <select ng-model="gv.team_scoreA">
+                    <option selected>0</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                </select>
+            </div>
+        </div>
+         : 
+        <div class="list">
+            <div class="item item-input item-select">
+                <select ng-model="gv.team_scoreB">
+                    <option selected>0</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                </select>
+            </div>
+        </div>
+        Team B
     </div>
-    <table ng-hide="gv.gameDone" class="game_tbl">
-
-    	<thead>
-    		<th>Team</th>
-    		<th>Name</th>
-    		<th>Schwarz</th>
-    		<th>Weiß</th>
-    		<th>Combo</th>
-    	</thead>
-    	<tbody>
-    	<tr ng-repeat="player in gv.players track by $index">
-    		<div class="list">
-    		<td>
-    		{{player.curr.team}}
-			</td>
-    		<td>{{player.name}}</td>
-    		<td>
-    			<plusminus value="'black'" update="update_white" player="player"></plusminus>
-    		</td>
-    		<td>
-    			<plusminus value="'whiteDown'" update="update_white" player="player"></plusminus>
-    		</td>
-    		<td>
-    			<plusminus value="'combo'" update="update_total" player="player"></plusminus>
-    		</td>
-    	</tr>
-    	</tbody>
+    <table ng-hide="!gv.gameStarted || gv.gameDone" class="game_tbl">
+        <thead>
+            <th>Team</th>
+            <th>Name</th>
+            <th>Schwarz</th>
+            <th>Weiß</th>
+            <th>Combo</th>
+        </thead>
+        <tbody>
+        <tr ng-repeat="player in gv.players track by $index">
+            <div class="list">
+            <td>
+            {{player.curr.team}}
+            </td>
+            <td>{{player.name}}</td>
+            <td>
+                <plusminus value="'black'" update="update_white" player="player" players="gv.players"></plusminus>
+            </td>
+            <td>
+                <plusminus value="'whiteDown'" update="update_white" player="player" players="gv.players"></plusminus>
+            </td>
+            <td>
+                <plusminus value="'combo'" update="update_total" player="player" players="gv.players"></plusminus>
+            </td>
+        </tr>
+        </tbody>
     </table>
     <button ng-show="gv.gameStarted && gv.gameDone" ng-click="end_game()">Spiel speichern</button>
+    <table ng-show="gv.gameStarted && gv.gameDone" class="game_tbl">
+        <thead>
+            <th>Team</th>
+            <th>Name</th>
+            <th>Schwarz</th>
+            <th>Weiß</th>
+            <th>Combo</th>
+        </thead>
+        <tbody>
+        <tr ng-repeat="player in gv.players track by $index">
+            <div class="list">
+            <td>
+            {{player.curr.team}}
+            </td>
+            <td>{{player.name}}</td>
+            <td>{{player.curr.black}}</td>
+            <td>{{player.curr.white}}</td>
+            <td>{{player.curr.combo}}</td>
+        </tr>
+        </tbody>
+    </table>
   </ion-content>
 </ion-view>
